--- a/helloworld.conf
+++ b/helloworld.conf
@@ -8,5 +8,5 @@ stop on shutdown
 
 respawn
 script
-    exec /usr/bin/node /home/ec2-user/helloworld.js
+    exec su --session-command="/usr/bin/node /home/ec2-user/helloworld.js" ec2-user
 end script
